Basic app starting up

--- a/src/Tippy/Tippy.csproj
+++ b/src/Tippy/Tippy.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Tippy.Core\Tippy.Core.csproj" />
+    <ProjectReference Include="..\Tippy.Ctrl\Tippy.Ctrl.csproj" />
   </ItemGroup>
 
 
