--- a/src/Tippy.Ctrl/Tippy.Ctrl.csproj
+++ b/src/Tippy.Ctrl/Tippy.Ctrl.csproj
@@ -1,7 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+	<Content Include="BinDeps\**">
+	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</Content>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Tippy.Core\Tippy.Core.csproj" />
+  </ItemGroup>
 
 </Project>
