Separate process classes

--- a/src/Tippy.Ctrl/Tippy.Ctrl.csproj
+++ b/src/Tippy.Ctrl/Tippy.Ctrl.csproj
@@ -9,6 +9,7 @@
 	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	</Content>
     <Folder Include="Properties\" />
+    <Folder Include="Process\" />
   </ItemGroup>
 
   <ItemGroup>
