--- a/src/Tippy/Properties/launchSettings.json
+++ b/src/Tippy/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     },
     "Tippy": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "home",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
