Initialize dev chain with spec template * Set ba-arg as hardcoded, which will be replaced by user config value in the future. * Set genesis.genesis_cell.message as ckb_dev_[timestamp]

--- a/src/Tippy.Ctrl/Tippy.Ctrl.csproj
+++ b/src/Tippy.Ctrl/Tippy.Ctrl.csproj
@@ -16,4 +16,15 @@
     <ProjectReference Include="..\Tippy.Core\Tippy.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="ChainSpecTemplate.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ChainSpecTemplate.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="BinDeps\mac\ckb.toml" />
+    <Content Remove="BinDeps\mac\ckb-miner.toml" />
+    <Content Remove="BinDeps\mac\default.db-options" />
+  </ItemGroup>
 </Project>
