--- a/src/Tippy/Properties/launchSettings.json
+++ b/src/Tippy/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "Tippy": {
       "commandName": "Project",
       "launchBrowser": false,
-      "launchUrl": "home",
+      "launchUrl": "",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
