--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/Tippy/ClientApp"]
 	path = src/Tippy/ClientApp
-	url = https://github.com/nervosnetwork/tippy-explorer-frontend.git
+	url = git@github.com:nervosnetwork/tippy-explorer-frontend.git
