--- a/src/Tippy.Ctrl/Tippy.Ctrl.csproj
+++ b/src/Tippy.Ctrl/Tippy.Ctrl.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp5.0</TargetFramework>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
