Exclude BinDeps from single file publish
Process.Start cannot fork binaries from extracted locations due to permission reason.

--- a/src/Tippy.Ctrl/Tippy.Ctrl.csproj
+++ b/src/Tippy.Ctrl/Tippy.Ctrl.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
 	<Content Include="BinDeps\**">
 	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
 	</Content>
     <Folder Include="Properties\" />
     <Folder Include="Process\" />
