--- a/src/Tippy.Core/Tippy.Core.csproj
+++ b/src/Tippy.Core/Tippy.Core.csproj
@@ -5,4 +5,14 @@
     <DebugType>embedded</DebugType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Settings.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Settings.json" />
+  </ItemGroup>
 </Project>
