--- a/src/Tippy.Core/Settings.json
+++ b/src/Tippy.Core/Settings.json
@@ -1,5 +1,5 @@
 ﻿{
-    "blockAssembler": {
-        "lockArg": "0xc8328aabcd9b9e8e64fbc566c4385c3bdeb219d7"
+    "BlockAssembler": {
+        "LockArg": "0xc8328aabcd9b9e8e64fbc566c4385c3bdeb219d7"
     }
 }
