Add project model and sqlite db

--- a/src/Tippy.Core/Tippy.Core.csproj
+++ b/src/Tippy.Core/Tippy.Core.csproj
@@ -8,11 +8,15 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="settings.json" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Settings.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
