Move hex util to Tippy.Util project

--- a/src/Ckb.Rpc/Ckb.Rpc.csproj
+++ b/src/Ckb.Rpc/Ckb.Rpc.csproj
@@ -6,4 +6,8 @@
     <DebugType>embedded</DebugType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tippy.Util\Tippy.Util.csproj" />
+  </ItemGroup>
+
 </Project>
