Handle port conflict

--- a/src/Tippy.Ctrl/Tippy.Ctrl.csproj
+++ b/src/Tippy.Ctrl/Tippy.Ctrl.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Tippy.Core\Tippy.Core.csproj" />
+    <ProjectReference Include="..\Tippy.Util\Tippy.Util.csproj" />
   </ItemGroup>
 
   <ItemGroup>
