Add miner_hash to blocks detail api

--- a/src/Tippy/Tippy.csproj
+++ b/src/Tippy/Tippy.csproj
@@ -23,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Ckb.Address\Ckb.Address.csproj" />
     <ProjectReference Include="..\Tippy.Core\Tippy.Core.csproj" />
     <ProjectReference Include="..\Tippy.Ctrl\Tippy.Ctrl.csproj" />
     <ProjectReference Include="..\Ckb.Rpc\Ckb.Rpc.csproj">
