--- a/src/Tippy/Tippy.csproj
+++ b/src/Tippy/Tippy.csproj
@@ -10,6 +10,12 @@
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
     <DebugType>embedded</DebugType>
     <UserSecretsId>6e0dc08b-01f2-47f6-8249-66ed1b18f469</UserSecretsId>
+    <Version>0.1.0</Version>
+    <PackageProjectUrl>https://github.com/nervosnetwork/tippy</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/nervosnetwork/tippy</RepositoryUrl>
+    <Copyright>Copyright (c) Nervos Foundation</Copyright>
+    <Authors>Nervos Foundation</Authors>
+    <Description>One click CKB devnet</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
