--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,18 +1,3 @@
 tag-template: 'v$RESOLVED_VERSION'
-version-resolver:
-  major:
-    labels:
-      - 'major'
-  minor:
-    labels:
-      - 'minor'
-  patch:
-    labels:
-      - 'patch'
-  default: patch
 template: |
-  Platform  | Package | SHA256 Checksum
-  --        | --      | --
-  Windows   | [tippy-win-x64.zip](https://github.com/nervosnetwork/tippy/releases/download/$RESOLVED_VERSION/tippy-win-x64.zip) | <code>todo</code>
-  macOS     | [tippy-osx-x64.zip](https://github.com/nervosnetwork/tippy/releases/download/$RESOLVED_VERSION/tippy-osx-x64.zip) | <code>todo</code>
-  Linux     | [tippy-linux-x64.zip](https://github.com/nervosnetwork/tippy/releases/download/$RESOLVED_VERSION/tippy-linux-x64.zip) | <code>todo</code>
+  TODO
