--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,6 +51,7 @@ jobs:
       uses: release-drafter/release-drafter@v5
       with:
         tag: v0.1.1-setup #${{ github.ref }}
+        name: v0.1.1-setup #${{ github.ref }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Upload binary
@@ -61,7 +62,7 @@ jobs:
       with:
         upload_url: ${{ steps.release_drafter.outputs.upload_url }}
         asset_path: release/${{ matrix.artifact_name }}.zip
-        asset_name: $${ matrix.artifact_name }}.zip
+        asset_name: ${{ matrix.artifact_name }}.zip
         asset_content_type: application/zip
     - name: Upload checksum
       id: upload-release-checksum
@@ -71,5 +72,5 @@ jobs:
       with:
         upload_url: ${{ steps.release_drafter.outputs.upload_url }}
         asset_path: release/${{ matrix.artifact_name }}.sha256.txt
-        asset_name: $${ matrix.artifact_name }}.sha256.txt
+        asset_name: ${{ matrix.artifact_name }}.sha256.txt
         asset_content_type: text/plain
