--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   publish:
     name: Publish ${{ matrix.runtime }}
-    if: contains(github.ref, "release")
+    if: contains(github.ref, 'release')
     runs-on: ubuntu-latest
 
     strategy:
