--- a/.github/workflows/tippy.yml
+++ b/.github/workflows/tippy.yml
@@ -2,9 +2,9 @@ name: tippy
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
 
 jobs:
   build:
