--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,7 +38,7 @@ jobs:
       id: release_drafter
       uses: release-drafter/release-drafter@v5
       with:
-        tag: ${{ steps.get_tag.outputs.tag }
+        tag: ${{ steps.get_tag.outputs.tag }}
         name: ${{ steps.get_tag.outputs.tag }}
         version: ${{ steps.get_tag.outputs.tag }}
       env:
