--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -104,7 +104,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.release_drafter.outputs.upload_url }}
+        upload_url: ${{ steps.get_upload_url.outputs.upload_url }}
         asset_path: release/${{ matrix.artifact_name }}.sha256.txt
         asset_name: ${{ matrix.artifact_name }}.sha256.txt
         asset_content_type: text/plain
