--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,12 +4,13 @@ on:
   pull_request:
     branches:
       - main
-    types: [closed]
+    # types: [closed]
 
 jobs:
   release:
     name: Publish
-    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')
+    #if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')
+    if: startsWith(github.event.pull_request.head.ref, 'release/')
     runs-on: ubuntu-latest
     steps:
     - name: Get tag
@@ -30,7 +31,7 @@ jobs:
           --        | --      | --
           Windows   | [tippy-win-x64.zip](https://github.com/nervosnetwork/tippy/releases/download/${{ steps.get_tag.outputs.tag }}/tippy-win-x64.zip) | <code>TODO</code>
           macOS     | [tippy-osx-x64.zip](https://github.com/nervosnetwork/tippy/releases/download/${{ steps.get_tag.outputs.tag }}/tippy-osx-x64.zip) | <code>TODO</code>
-          Linux     | [tippy-linux-x64.zip](https://github.com/nervosnetwork/tippy/releases/download/${{ steps.get_tag.outputs.tag }}/tippy-linux-x64.zip) | <code>TODO</code>
+          Linux     | [tippy-linux-x64.tar.gz](https://github.com/nervosnetwork/tippy/releases/download/${{ steps.get_tag.outputs.tag }}/tippy-linux-x64.tar.gz) | <code>TODO</code>
         draft: true
         prerelease: true
     - name: Output upload URL file
@@ -44,7 +45,8 @@ jobs:
   publish:
     name: Publish ${{ matrix.runtime }}
     needs: [release]
-    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')
+    # if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')
+    if: startsWith(github.event.pull_request.head.ref, 'release/')
     runs-on: ubuntu-latest
 
     strategy:
@@ -53,15 +55,15 @@ jobs:
           - os: ubuntu-latest
             short_name: linux
             runtime: linux-x64
-            artifact_name: tippy-linux-x64
+            artifact_name: tippy-linux-x64.tar.gz
           - os: windows-latest
             short_name: win
             runtime: win-x64
-            artifact_name: tippy-win-x64
+            artifact_name: tippy-win-x64.zip
           - os: macos-latest
             short_name: mac
             runtime: osx-x64
-            artifact_name: tippy-osx-x64
+            artifact_name: tippy-osx-x64.zip
 
     steps:
     - name: Load upload URL file
@@ -91,13 +93,17 @@ jobs:
       run: |
         dotnet publish src/Tippy/Tippy.csproj -c Release -r ${{ matrix.runtime }} /p:PublishSingleFile=true /p:IncludeNativeLibrariesForSelfExtract=true -o ./bin/publish/${{ matrix.artifact_name }}
         chmod +x ./bin/publish/${{ matrix.artifact_name }}/BinDeps/${{ matrix.short_name }}/ckb*
-    - name: Archive files
+    - name: Archive files zip
+      if: matrix.short_name != 'linux'
       uses: papeloto/action-zip@v1
       with:
         files: ./bin/publish/${{ matrix.artifact_name }}
-        dest: release/${{ matrix.artifact_name }}.zip
+        dest: release/${{ matrix.artifact_name }}
+    - name: Archive files tar
+      if: matrix.short_name == 'linux'
+      run: tar -cvf release/${{ matrix.artifact_name }} ./bin/publish/${{ matrix.artifact_name }}
     - name: Generate checksum
-      run: sha256sum release/${{ matrix.artifact_name }}.zip > release/${{ matrix.artifact_name }}.sha256.txt
+      run: sha256sum release/${{ matrix.artifact_name }} > release/${{ matrix.artifact_name }}.sha256.txt
     - name: Upload binary
       id: upload-release-binary
       uses: actions/upload-release-asset@v1
@@ -105,8 +111,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.get_upload_url.outputs.upload_url }}
-        asset_path: release/${{ matrix.artifact_name }}.zip
-        asset_name: ${{ matrix.artifact_name }}.zip
+        asset_path: release/${{ matrix.artifact_name }}
+        asset_name: ${{ matrix.artifact_name }}
         asset_content_type: application/zip
     - name: Upload checksum
       id: upload-release-checksum
